# A-Maze-Ing

./: .gitignore  ANIMATION_INTEGRATION.md  FEATURES_DEMO.md  HOW_TO_TEST.md  IMPLEMENTATION_SUMMARY.md  Makefile  README.md  REFACTORING_SUMMARY.md  TESTING_GUIDE.md  a_maze_ing.py  maze_generator_BFS.py  pyproject.toml  requirements.txt  test_animation_interface.py  test_color_change.py  test_file_writer.py  test_imperfection.py  test_path_finder.py  verify_api.py
config/: default_config.txt
docs/: package_usage.md
maze_env/: pyvenv.cfg
src/: 1337.txt  animatable_maze_adapter.py  config_parser.py  file_writer.py  frame_renderer.py  maze_animator.py  maze_animator_prim.py  maze_generator_BFS.py  maze_generator_DFS.py  maze_generator_prim.py  maze_renderer.py  maze_screen_mapper.py  path_finder.py  screen_buffer.py  test_animation.py  test_frame_animation.py
src/mazegen/: generator.py
src/mazegen/algorithms/: bfs.py  dfs.py  prim.py
src/mazegen/internal/: README.md  animated_maze_generator.py  animated_maze_with_pattern.py  config_parser.py  file_writer.py  leet_animation.py  maze_base.py  maze_generator_BFS.py  maze_generator_dfs.py  maze_generator_prim.py  maze_with_animation.py  path_finder.py  pattern_embedder.py
src/mazegen/rendering/: 1337.txt  animated_maze_with_pattern.py  animator.py  frame_renderer.py  leet_animation.py  renderer.py  screen_buffer.py  screen_mapper.py
tests/: quick_test.py  test.py  test_algorithms.py  test_animation.py  test_file_writer.py  test_frame_animation.py  test_maze.py  test_maze_base.py
(+4 files in other folders)
