[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "mazegen"
version = "1.0.0"
description = "A-Maze-ing maze generator package"
authors = [
    {name = "skoulal", email = "yskoulal@student.1337.ma"},
    {name = "wabbad", email = "wabbad@student.1337.ma"}
]
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}

dependencies = []

[tool.setuptools.packages.find]
where = ["src"]